- Patched files can be written correctly to a target directory - Fixed cross-platform file separators - Fixed small issues - Created comments